# sqldim

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  quality_report.txt  report.json
.github/workflows/: benchmark.yml  code-quality.yml  lint.yml  tests.yml
benchmarks/: dataset_gen.py  infra.py  memory_probe.py  runner.py  scan_probe.py  suite.py
benchmarks/groups/: __init__.py  dgm.py  model.py  scd.py
benchmarks/results/: bench_20260316_203209.json  bench_20260316_203316.json  bench_20260316_203347.json  bench_20260316_204156.json  bench_20260316_204558.json  bench_20260316_213920.json  bench_20260316_215750.json  bench_20260316_215907.json  bench_20260316_220929.json  bench_20260316_221213.json  bench_20260316_221431.json  bench_20260316_221805.json  bench_20260316_222753.json  bench_20260316_231945.json  bench_20260317_001729.json
docs/: getting-started.md  index.md  theoretical.md
docs/architecture/: benchmark-suite.md  column-level-lineage.md  drift-observatory-perf.md  late-arriving-dimensions.md  overview.md  physical-partitioning-and-bucketing.md  scd-engine-design.md  schema-evolution-policy.md  semantic-bucketing.md
docs/development/: deep_research.md  dimensional_graph_modelling.md  dmiensional_modelling.md  theoretical.md
docs/features/: data_contracts.md  dependency_graph.md  dimensional_graph_model.md  medallion_layers.md  notifications.md  observability.md
docs/guides/: big_data.md  lazy_loaders.md  vectorized_etl.md
docs/motivation/: dimensional_graph_modelling.md
docs/patterns/: dual_paradigm.md  hybrid_scd.md
docs/reference/: api-surface.md  cli.md  config.md  datasets.md  dimensions.md  exceptions.md  fact_types.md  lineage.md  loader.md  scd_processors.md  schema_graph.md  session.md  sinks.md  sources.md
docs/runbook/: big_data.md  semantic_layer.md  vectorized_etl.md
examples/datasets/: __init__.py
examples/nba_analytics/: showcase.py  staging.py
examples/saas_growth/: showcase.py
examples/user_activity/: showcase.py
sqldim/: __init__.py  cli.py  config.py  exceptions.py  session.py
sqldim/application/: __init__.py  _pipeline_sources.py  ask.py
sqldim/cli/: __init__.py  __main__.py  ask.py  bench.py  examples.py
sqldim/contracts/: __init__.py  composite.py  contract.py  engine.py  exceptions.py  freshness.py  gates.py  registry.py  report.py  rules.py  scd_rules.py  schema.py  sla.py  version.py
sqldim/core/: __init__.py  facts.py  fields.py  graph.py  mixins.py  models.py
sqldim/dimensions/: __init__.py  date.py  junk.py  time.py
sqldim/examples/: __init__.py  utils.py
sqldim/graph/: __init__.py  registry.py  schema_graph.py  traversal.py
sqldim/io/: __init__.py  clustering.py  compaction.py
sqldim/lineage/: __init__.py  column.py  emitter.py  events.py
sqldim/loaders/: __init__.py  accumulating.py  array_metric.py  bitmask.py  cumulative.py  dimensional.py  edge_projection.py  resolution.py  snapshot.py  strategies.py
sqldim/medallion/: __init__.py  build_order.py  layer.py
sqldim/migrations/: context.py  generator.py  guards.py  ops.py
sqldim/models/: __init__.py  graph.py
sqldim/narwhals/: __init__.py  backfill.py  scd_engine.py  sk_resolver.py  transforms.py
sqldim/notifications/: __init__.py  channel.py  (+4 more)
tests/: conftest.py  test_accumulating.py  test_cli.py  test_config.py  test_contracts.py  test_core.py  test_coverage_100.py  test_coverage_final.py  test_coverage_gap.py  test_coverage_gap_v2.py  test_dimensions.py  test_gates.py  test_hybrid_scd.py  test_junk_dimension.py  test_kimball_extended.py  test_loaders.py  test_medallion.py  test_migrations.py  test_nba_pipeline.py  test_observability.py  test_query.py  test_resolution.py  test_scd.py  test_session.py  test_silver_order.py  test_snapshot.py  test_strategies.py  test_time_dimension.py
(+655 files in other folders)
