[project]
name = "sqldim"
version = "1.0.0"
description = "A Python toolkit for Dimensional Modeling (Kimball methodology) using SQLModel."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.34",
    "pydantic-settings>=2.2.1",
    "sqlalchemy[asyncio]>=2.0.29",
    "alembic>=1.13.1",
    "duckdb>=1.5.0",
    "narwhals>=2.18.0",
    "pytz>=2026.1.post1",
]

[project.optional-dependencies]
kafka        = ["confluent-kafka>=2.3", "polars>=0.20"]
kafka-native = ["duckdb>=1.1"]
kinesis      = ["boto3>=1.34", "polars>=0.20"]
cdc          = ["confluent-kafka>=2.3", "polars>=0.20"]
streaming    = [
    "confluent-kafka>=2.3",
    "boto3>=1.34",
    "polars>=0.20",
]
otel         = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
]
lineage      = ["openlineage-python>=1.15"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "polars>=1.39.0",
    "pandas>=3.0.1",
    "aiosqlite>=0.22.1",
    "faker>=37.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-json-report>=1.5.0",
    "radon>=6.0.1",
]

