[project]
name = "sqldim"
version = "2.0.0"
description = "A Python toolkit for Dimensional Modeling (Kimball methodology) using SQLModel."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.34",
    "pydantic-settings>=2.2.1",
    "sqlalchemy[asyncio]>=2.0.29",
    "alembic>=1.13.1",
    "duckdb>=1.5.0",
    "narwhals>=2.18.0",
    "pytz>=2026.1.post1",
]

[project.optional-dependencies]
kafka        = ["confluent-kafka>=2.3", "polars>=0.20"]
kafka-native = ["duckdb>=1.1"]
kinesis      = ["boto3>=1.34", "polars>=0.20"]
cdc          = ["confluent-kafka>=2.3", "polars>=0.20"]
streaming    = [
    "confluent-kafka>=2.3",
    "boto3>=1.34",
    "polars>=0.20",
]
otel         = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
]
lineage      = ["openlineage-python>=1.15"]

[tool.coverage.run]
omit = [
    # benchmark harness — performance tooling, not subject to unit-test CI
    "sqldim/application/benchmarks/*",
    # integration fixtures requiring live DLT/Flask dependencies
    "sqldim/application/examples/features/integrations/flask_dlt.py",
    "sqldim/application/examples/features/integrations/ecommerce_api.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # SQLModel uses class-based Pydantic config internally (third-party, unfixable)
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning:sqlmodel",
    # runpy double-import of sqldim.cli in test_main_as_module (test isolation artefact)
    "ignore:.*sqldim.cli.*found in sys.modules.*:RuntimeWarning:runpy",
]

[dependency-groups]
dev = [
    "polars>=1.39.0",
    "pandas>=3.0.1",
    "aiosqlite>=0.22.1",
    "faker>=37.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-json-report>=1.5.0",
    "radon>=6.0.1",
]
lineage = [
    "sqlglot>=30.0.1",
]

